data/src/main/java/com/example/data/utilis/errors/ConflictError.kt
package com.example.data.utilis.errors

class ConflictError(
    val code: Int? = null,
    override val message: String? = null,
) : Throwable(message)
